<resources>
    <string name="app_name">TP1Application2</string>
    <string name="selectionner_date">Sélectionnez une date :</string>
    <string name="evenements">Événements pour cette date :</string>
    <string name="ajouter_evenement">Ajoutez un événement</string>
    <string name="ajouter">Ajouter</string>
    <string name="erreur_evenement">Veuillez entrer un événement valide</string>
    <string name="pas_evenement">Aucun événement</string>

        <string name="agenda_prompt">Prêt à gérer votre agenda ?</string>
        <string name="login">Se connecter</string>
        <string name="signup">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="event_updated">Événement mis à jour</string>
    <string name="back">Retour</string>

    <string name="modify">Modifier</string>

        <string name="event_deleted">Événement supprimé</string>


        <string name="username">Nom utilisateur</string>

        <string name="confirm_password">Confirmer le mot de passe</string>

    <string name="error_fill_fields">Veuillez remplir tous les champs !</string>
    <string name="successful_login">Connexion réussie !</string>
    <string name="email_not_verified">Utilisateur non activé. Veuillez vérifier vos e-mails.</string>
    <string name="error_incorrect_email_password">Email ou mot de passe incorrect. %1$s</string>

    <string name="already_a_member">Déjà membre ? Se connecter ici</string>
        <string name="successful_signup">Inscription réussie ! Vérification par email envoyée à %1$s</string>
        <string name="user_data_saved">Données utilisateur enregistrées avec succès !</string>
        <string name="failed_to_save_user_data">Échec de l enregistrement des données utilisateur. %1$s</string>
        <string name="failed_to_send_email_verification">Échec de l envoi de la vérification par email. %1$s</string>
        <string name="failed_to_update_username">Échec de la mise à jour du nom d utilisateur. %1$s</string>
        <string name="user_is_null_after_signup">L utilisateur est nul après l inscription.</string>
        <string name="signup_failed">Échec de l inscription. %1$s</string>
        <string name="passwords_do_not_match">Les mots de passe ne correspondent pas.</string>




</resources>