<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-250dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="70dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="70dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="70dp"

        android:text="@string/login"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/back"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
</LinearLayout>
